feat: Refactor contact-service architecture and fix service boundaries
BREAKING CHANGES:
- Remove company business logic from contact-service
- Clean separation between contact/company/user services
- Updated DTOs and domain models for proper service boundaries

✨ New Features:
- Add CompanyContactMapper with MapStruct
- Create clean DTO records for requests/responses
- Add dedicated CompanyContact domain model and repository
- Implement proper service layer separation

🏗️ Architecture Improvements:
- Remove value objects (CompanySize, Currency, Industry, TaxId) - belong to company-service
- Fix Contact.java inheritance from BaseEntity (remove duplicate UUID)
- Clean UpdateContactRequest - remove user/company fields
- Separate repositories: CompanyContactRepository + CompanyContactJpaRepository

🛡️ Security Enhancements:
- Update AuthenticatedUser with proper UserDetails implementation
- Enhance JwtTokenProvider and JwtUtil for tenant extraction
- Fix SecurityContextUtil with getCurrentTenantId()

📦 Code Quality:
- Use Lombok extensively (@Builder, @Data, @RequiredArgsConstructor)
- Implement record-based DTOs with validation annotations
- Apply SOLID principles and clean architecture patterns
- Add comprehensive validation and error handling

🎯 Service Boundaries:
- contact-service: emails, phones, addresses, websites only
- company-service: business data (industry, size, financials)
- user-service: user profiles and preferences

Files changed: 12 modified, 1 deleted, 14 new files created